fix bugs in preprocessing rasters

--- a/notebooks/preprocess-rasters-001.ipynb
+++ b/notebooks/preprocess-rasters-001.ipynb
@@ -323,6 +323,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rgba_aligned' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/preprocess-rasters-001.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/preprocess-rasters-001.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m rgba_aligned\u001b[39m.\u001b[39mshape\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'rgba_aligned' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "rgba_aligned.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
