--- a/notebooks/explore-segmentation-008.ipynb
+++ b/notebooks/explore-segmentation-008.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "import utils\n",
     "import cv2\n",
     "import numpy as np\n",
+    "from skimage import feature\n",
     "from skimage.segmentation import felzenszwalb\n",
     "from skimage.color import rgb2hsv\n",
     "from skimage.filters import threshold_sauvola\n",
@@ -31,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12-Dec-23 21:45:28 - INFO - Starting 'load_config'.\n",
-      "12-Dec-23 21:45:28 - INFO - Finished 'load_config' in 0.0267 secs.\n"
+      "13-Dec-23 01:21:26 - INFO - Starting 'load_config'.\n",
+      "13-Dec-23 01:21:26 - INFO - Finished 'load_config' in 0.0509 secs.\n"
      ]
     }
    ],
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +63,12 @@
     "        images.append(img_rgb)\n",
     "    return np.array(images)\n",
     "\n",
+    "def load_grayscale_images(image_paths):\n",
+    "    images = []\n",
+    "    for path in image_paths:\n",
+    "        img = cv2.imread(path, cv2.IMREAD_GRAYSCALE)\n",
+    "        images.append(img)\n",
+    "    return np.array(images)\n",
     "\n",
     "def plot_cropped_images(images, titles, ncols=3):\n",
     "    \"\"\"Plot a list of loaded images.\n",
@@ -84,36 +91,39 @@
     "        # chart formatting\n",
     "        ax.set_title(os.path.basename(titles[n]), fontsize=8)\n",
     "        ax.axis('off')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def normalize_image(image: np.ndarray) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Normalizes the pixel values of the input image to the range 0-255.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - image (numpy.ndarray): The input image.\n",
+    "\n",
+    "    Returns:\n",
+    "    - numpy.ndarray: The normalized image.\n",
+    "    \"\"\"\n",
+    "    normalized_image = ((image - np.min(image)) / (np.max(image) - np.min(image))) * 255\n",
+    "    return normalized_image.astype(np.uint8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (176,) + inhomogeneous part.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-006.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-006.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m rgb_fns \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39mget_filenames(\u001b[39m\"\u001b[39m\u001b[39m../data/02_intermediate/04_cropped_imgs/\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mpng\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-006.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rgb_imgs \u001b[39m=\u001b[39m load_rgb_images(rgb_fns)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-006.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m plot_cropped_images(rgb_imgs[:\u001b[39m9\u001b[39m], rgb_fns[:\u001b[39m9\u001b[39m])\n",
-      "\u001b[1;32m/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-006.ipynb Cell 4\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-006.ipynb#W3sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     img_rgb \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(img, cv2\u001b[39m.\u001b[39mCOLOR_BGR2RGB)  \u001b[39m# Convert to RGB\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-006.ipynb#W3sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     images\u001b[39m.\u001b[39mappend(img_rgb)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-006.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49marray(images)\n",
-      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (176,) + inhomogeneous part."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rgb_fns = utils.get_filenames(\"../data/02_intermediate/04_cropped_imgs/\", \"png\")\n",
-    "rgb_imgs = load_rgb_images(rgb_fns)\n",
-    "plot_cropped_images(rgb_imgs[:9], rgb_fns[:9])"
+    "rgb_fns = utils.get_filenames(\"../data/02_intermediate/04_cropped_imgs/\", \"png\", 'rgb')\n",
+    "# chm_fns = utils.get_filenames(\"../data/02_intermediate/04_cropped_imgs/\", \"png\", 'chm')\n",
+    "rgb_imgs = load_rgb_images(rgb_fns[:9])\n",
+    "# chm_imgs = load_grayscale_images(chm_fns[:-9])\n",
+    "# plot_cropped_images(rgb_imgs[:9], rgb_fns[:9])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +164,50 @@
     "    return mask\n",
     "\n",
     "\n",
+    "def color_based_segment_mask(segments, image):\n",
+    "    # Convert segments to a binary image\n",
+    "    mask = (segments > 0).astype('uint8')\n",
+    "\n",
+    "    # Calculate the average color of each segment\n",
+    "    avg_colors = cv2.mean(image, mask=mask)\n",
+    "\n",
+    "    # Convert the average colors to a numpy array of the same size as the color boundaries\n",
+    "    avg_colors = np.array(avg_colors[:3])\n",
+    "\n",
+    "    # Define the color range for bushes or shrubs\n",
+    "    lower_color = np.array([25., 50., 50.])\n",
+    "    upper_color = np.array([85., 255., 255.])\n",
+    "\n",
+    "    # Keep the segments that fall within the color range\n",
+    "    mask = cv2.inRange(avg_colors, lower_color, upper_color)\n",
+    "\n",
+    "    return mask\n",
+    "\n",
+    "\n",
+    "def texture_based_segment_mask(segments, image):\n",
+    "    # Convert the image to grayscale\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # Calculate the Local Binary Pattern of the image\n",
+    "    lbp = feature.local_binary_pattern(gray, P=8, R=1)\n",
+    "    \n",
+    "    # Convert segments_fz to a binary image\n",
+    "    mask = (segments > 0).astype('uint8') * 255\n",
+    "\n",
+    "    # Now use this mask in cv2.mean\n",
+    "    avg_lbp = cv2.mean(lbp, mask=mask)\n",
+    "    # # Calculate the average LBP of each segment\n",
+    "    # avg_lbp = cv2.mean(lbp, mask=segments)\n",
+    "\n",
+    "    # Define the LBP range for bushes or shrubs\n",
+    "    lower_lbp = 0.2\n",
+    "    upper_lbp = 0.8\n",
+    "\n",
+    "    # Keep the segments that fall within the LBP range\n",
+    "    mask = (avg_lbp >= lower_lbp) & (avg_lbp <= upper_lbp)\n",
+    "\n",
+    "    return mask\n",
+    "\n",
     "def apply_mask(image, mask):\n",
     "    # Ensure mask is boolean\n",
     "    mask = mask.astype(bool)\n",
@@ -164,37 +218,151 @@
     "    # Apply the mask to the image\n",
     "    masked_image = image * mask\n",
     "    \n",
+    "    return masked_image\n",
+    "\n",
+    "def apply_color_mask(image, mask):\n",
+    "    # Ensure mask is boolean\n",
+    "    mask = mask.astype(bool)\n",
+    "    \n",
+    "    # Repeat the mask along its missing dimensions\n",
+    "    # Expand dimensions of the mask to match the image\n",
+    "    mask = np.expand_dims(mask, axis=-1)\n",
+    "    mask = np.repeat(mask, image.shape[-1], axis=-1)\n",
+    "    \n",
+    "    # Apply the mask to the image\n",
+    "    masked_image = image * mask\n",
+    "    \n",
     "    return masked_image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (87,87,3) (3,1,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb Cell 6\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# mask = create_center_segment_mask(segments_fz, rgb_img.shape)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m mask \u001b[39m=\u001b[39m color_based_segment_mask(segments_fz, rgb_img)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m masked_image \u001b[39m=\u001b[39m apply_color_mask(rgb_img, mask)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# mask = texture_based_segment_mask(segments_fz, rgb_img)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# masked_image = apply_mask(rgb_img, mask)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m plot_masked_images(rgb_img, segments_fz, masked_image)\n",
+      "\u001b[1;32m/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=100'>101</a>\u001b[0m mask \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrepeat(mask, image\u001b[39m.\u001b[39mshape[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m], axis\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=102'>103</a>\u001b[0m \u001b[39m# Apply the mask to the image\u001b[39;00m\n\u001b[0;32m--> <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=103'>104</a>\u001b[0m masked_image \u001b[39m=\u001b[39m image \u001b[39m*\u001b[39;49m mask\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/ashwineekumarpandey/Documents/Academics/Masters/SU_MS_MLAI/Modules/ResearchProject/mlai-research/notebooks/explore-segmentation-008.ipynb#X12sZmlsZQ%3D%3D?line=105'>106</a>\u001b[0m \u001b[39mreturn\u001b[39;00m masked_image\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (87,87,3) (3,1,3) "
+     ]
+    }
+   ],
    "source": [
-    "rgb_img = rgb_imgs[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "rgb_img = normalize_image(rgb_imgs[3])\n",
     "segments_fz = felzenszwalb(rgb_img, scale=150, sigma=0.5, min_size=100)\n",
-    "mask = create_center_segment_mask(segments_fz, rgb_img.shape)\n",
-    "masked_image = apply_mask(rgb_img, mask)\n",
+    "# mask = create_center_segment_mask(segments_fz, rgb_img.shape)\n",
+    "mask = color_based_segment_mask(segments_fz, rgb_img)\n",
+    "masked_image = apply_color_mask(rgb_img, mask)\n",
+    "# mask = texture_based_segment_mask(segments_fz, rgb_img)\n",
+    "# masked_image = apply_mask(rgb_img, mask)\n",
     "plot_masked_images(rgb_img, segments_fz, masked_image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# chm_fns = utils.get_filenames(\"../data/02_intermediate/03_cropped_tifs/\", \"tif\")"
+    "# Convert segments to a binary image\n",
+    "mask = (segments_fz > 0).astype('uint8')\n",
+    "\n",
+    "# Calculate the average color of each segment\n",
+    "avg_colors = cv2.mean(rgb_img, mask=mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(146.4718719002409, 146.66246280289076, 100.59713759387841, 0.0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_colors = np.array(avg_colors[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([146.4718719 , 146.6624628 , 100.59713759])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lower_color = np.array([25., 50., 50.])\n",
+    "upper_color = np.array([85., 255., 255.])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([25., 50., 50.])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lower_color"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = cv2.inRange(avg_colors, lower_color, upper_color)\n"
    ]
   },
   {
