major changes to preprocess, segment, adding synthetic data

--- a/notebooks/modelling-001.ipynb
+++ b/notebooks/modelling-001.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,15 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18-Dec-23 00:33:38 - INFO - Starting 'load_config'.\n",
-      "18-Dec-23 00:33:38 - INFO - Finished 'load_config' in 0.0230 secs.\n"
+      "20-Dec-23 09:55:56 - INFO - Starting 'load_config'.\n",
+      "20-Dec-23 09:55:56 - INFO - Finished 'load_config' in 0.0228 secs.\n"
      ]
     }
    ],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,12 +222,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load your data into df, features, target\n",
     "X_train, y_train, X_val, y_val = load_modelling_data(conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((48, 1581), (48,), (4, 1581), (4,))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape, y_train.shape, X_val.shape, y_val.shape"
    ]
   },
   {
